Fixed letter-spacing in css

--- a/css/style.sass
+++ b/css/style.sass
@@ -161,6 +161,7 @@ h2
 		height: 180px
 		line-height: 180px
 		font-size: 30px
+		letter-spacing: normal
 
 		img
 			vertical-align: middle
